# wood_league_app

./: .env.example  .gitignore  .snyk  CLAUDE.md  DELIVERABLES.md  FINAL_CHECKLIST.md  README.md  README_RUNPOD_MIGRATION.md  RUNPOD_DEPLOYMENT.md  RUNPOD_MIGRATION_SUMMARY.md  RUNPOD_SETUP_CHECKLIST.md  install-hooks.sh  pyproject.toml  railpack.json  railway.toml  requirements.txt  runpod plan.md  security-scan.sh  validate-runpod-setup.sh  wood_league_workspace.code-workspace
.issues/: 0009-dashboard-last-checked-datetime-should-d.md  0010-openings-on-charts.md  0011-dashboard-page-filters.md  0012-bold-club-player-name.md  0013-opening-search-bug.md  0014-loading-blinker-placement.md  0015-add-analysis-worker-api.md  0015-game-analysis-elements.md  0016-game-analysis-page-rewrite.md
.snyk-reports/: code-latest.json
.streamlit/: config.toml
accounts/: middleware.py
alembic/: env.py
alembic/versions/: 45f01e2157f4_initial_schema.py  755322e96c64_add_name_and_email_to_players.py  9b2d1c8e4a11_add_arrow_score_columns.py  (+3 more)
analysis/: models.py
api/: admin_urls.py  admin_views.py  authentication.py  models.py  serializers.py  urls.py  views.py
app/: config.py
config/: settings.py  urls.py
docs/: Wood_League.code-workspace  Woodland_Chess.code-workspace  database-erd.md  erd.mmd
documentation/: analysis-math.md  worker-api.md
games/: board_builder.py  partial_urls.py  services.py  stat_cards.py  tests.py  views.py
templates/: base.html
wood_league_chess.egg-info/: requires.txt
woodland_chess.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+61 files in other folders)
